--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -30,8 +30,10 @@
         <div>
             {% for project in projects %}
                 <div>
+                    {% if request.user == project.host %}
                     <a href="{% url 'update-project' project.id %}">Edit</a>
                     <a href="{% url 'delete-project' project.id %}">Delete</a>
+                    {% endif %}
                     <span>@{{ project.host.username }}</span>
                     <h5>{{project.id}} -- <a href="{% url 'project' project.id %}">{{project.name}}</a></h5>
                     <small>{{ project.topic.name }}</small>
