--- a/base/templates/base/project.html
+++ b/base/templates/base/project.html
@@ -2,6 +2,52 @@
 
 {% block content %}
 
-<h1>{{project.name}}</h1>
+<style>
+   .project-container {
+       display: grid;
+       grid-template-columns: 3fr 1fr;
+   }
+</style>
+
+<div class="project-container">
+    <div>
+        <h1>{{ project.name }}</h1>
+        <p>{{ room.description }}</p>
+
+        <div class="comment-wrapper">
+            <h3>Conversation</h3>
+            <hr>
+            {% for comment in comments %}
+            <div>
+                {% if request.user == comment.user %}
+                <a href="{% url 'delete-message' comment.id %}">Delete</a>
+                {% endif %}
+                <small>@{{ comment.user }} {{ comment.created|timesince }}</small>
+                <p>{{ comment.body }}</p>
+                <hr>
+            </div>
+            {% endfor %}
+        </div>
+
+        {% if request.user.is_authenticated %}
+        <div class="comment-form">
+            <form method="POST" action="">
+                {% csrf_token %}
+                <input type="text" name="body" placeholder="Write your comment here..." />
+            </form>
+        </div>
+        {% endif %}
+    </div>
+    <div>
+        <h3>Participants</h3>
+        <hr>
+
+        {% for user in participants %}
+            <div>
+                <p>@{{ user.username }}</p>
+            </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
