--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>TopEvent</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
-</head>
-<body>
+{% load static %}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>TopEvent - Create and share your ideas!</title>
+  </head>
+  <body>
     {% include 'navbar.html' %}
 
     {% if messages %}
@@ -22,5 +24,6 @@
 
     {% endblock %}
 
-</body>
+    <script src="{% static 'js/script.js' %}"></script>
+  </body>
 </html>
