--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -7,22 +7,13 @@
         <div class="activities__boxHeader roomListRoom__header">
             <a href="{% url 'user-profile' comment.user.id %}" class="roomListRoom__author">
                 <div class="avatar avatar--small">
-                    <img src="https://randomuser.me/api/portraits/women/11.jpg"/>
+                    <img src="{{ comment.user.userdetails.avatar.url }}"/>
                 </div>
                 <p>
                     @{{ comment.user }}
                     <span>{{ comment.created|timesince }}</span>
                 </p>
             </a>
-            <div class="roomListRoom__actions">
-                <a href="#">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                         viewBox="0 0 32 32">
-                        <title>remove</title>
-                        <path d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z"></path>
-                    </svg>
-                </a>
-            </div>
         </div>
         <div class="activities__boxContent">
             <p>commented on “<a href="{% url 'project' comment.project.id %}">{{ comment.project }}</a>”</p>
