--- a/templates/main.html
+++ b/templates/main.html
@@ -24,6 +24,6 @@
 
     {% endblock %}
 
-    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/dropdown_menu.js' %}"></script>
   </body>
 </html>
